--- a/slug_trade/templates/slug_trade_app/header-footer/navigation-basic.html
+++ b/slug_trade/templates/slug_trade_app/header-footer/navigation-basic.html
@@ -4,7 +4,7 @@
 
     <div class="nav-logo">
       <a href="{% url 'slug_trade_app:index' %}">
-        <img src="{% static 'images/logo_long.png' %}" alt="Slug Trade Logo" width="350">
+        <img src="{% static 'images/logo2.png' %}" alt="Slug Trade Logo" width="75">
       </a>
     </div>
 </div>
